src/test/deca/syntax/valid/variables/many_affectation.deca
// Description:
//    Tests a valid program with many affectation.
//
// Results:
//
//
// History:
//    created on 17/12/2024

{
        int a = 1;
        int b = 2;
        int c = 3;
        int d = 4;
        int e = 5;
        int f = 6;
        int g = 7;
        int h = 8;
        int i = 9;
}